<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="tag_app">INSTAGRAM_COLLAGE</string>
    <string name="app_name">TestInstagramCollage</string>

    <string name="loading">Loading...</string>
    <string name="not_found_data">Not found!</string>


    <string name="label_nick">Nickname:</string>
    <string name="button_getcollage">Давай Collage</string>

    <string name="button_createcollage">Создать Collage</string>

    <string name="label_email">E-mail:</string>
    <string name="not_create_collage">Not created collage!</string>
    <string name="create_collage_processing">Processing...</string>
    <string name="button_sendcollage">Send</string>

    <string name="collage_name">collage.jpg</string>

    <string name="action_settings">Settings</string>

    <string name="instagram_logout">Logout</string>
    <string name="instagram_exit">Exit</string>

</resources>
