<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_fragment_get_collage"
    android:background="@android:color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/container_nick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/label_nick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="5dp"
        android:textSize="17sp"
        android:textColor="@android:color/white"
        android:text="@string/label_nick"
        />
    <EditText
        android:id="@+id/edit_nickname"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_margin="5dp"
        android:padding="2dp"
        android:layout_weight="1"
        android:inputType="text"
        android:hint=""
        android:imeOptions="actionSend"
        android:background="@android:color/background_light"
        android:singleLine="true"
        />
    </LinearLayout>

    <Button
        android:id="@+id/button_get_collage"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container_nick"
        android:layout_centerHorizontal="true"
        android:text="@string/button_getcollage"
        />

    <TextView
        android:id="@+id/message_label"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button_get_collage"
        android:text=""
        android:textSize="16sp"
        android:textColor="@android:color/white"
        />

    <FrameLayout
        android:id="@+id/loading_label_getcollage_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#aaaaaaaa">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/loading"
            android:textSize="22sp"
            android:textColor="@android:color/black"/>

    </FrameLayout>


</RelativeLayout>